# smudge

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
examples/: mud.scm
src/: Makefile.am  action.c  action.h  application.c  application.h  color_string.c  color_string.h  esc_sequence.c  esc_sequence.h  guile.c  guile.h  history.c  history.h  history_buffer.c  history_buffer.h  input_line.c  input_line.h  keys.c  keys.h  line_buffer.c  line_buffer.h  main.c  mud_char.c  mud_char.h  mud_connection.c  mud_connection.h  mud_session.c  mud_session.h  mud_string.c  mud_string.h  mud_ui.c  mud_ui.h  mud_window.c  mud_window.h  scrollback.c  scrollback.h  scrollback_buffer.c  scrollback_buffer.h  search.c  search.h  (+14 more)
tests/: Makefile.am  check_mud.c  check_smudge.c  color_string_tests.c  color_string_tests.h  common_test.h  esc_sequence_tests.c  esc_sequence_tests.h  history_buffer_tests.c  history_buffer_tests.h  history_tests.c  history_tests.h  key_binding_tests.c  key_binding_tests.h  line_buffer_tests.c  line_buffer_tests.h  memleak_checks.c  memleak_checks.h  mock_window_ops.c  mock_window_ops.h  mud_string_tests.c  mud_string_tests.h  scrollback_buffer_tests.c  scrollback_buffer_tests.h  telnet_tests.c  telnet_tests.h  utilities_tests.c  utilities_tests.h  window_buffer_tests.c  window_buffer_tests.h
